resources/tribe-events-full.css
/* ... */
#tribe-bar-collapse-toggle.tribe-bar-filters-open span.tribe-bar-toggle-arrow:after {
	top: 0px;
	border-top-color: transparent;
	border-bottom-color: inherit;
}

#tribe-bar-form.tribe-bar-collapse #tribe-bar-views + .tribe-bar-filters {
	display: none;
	margin-top: 5px;
	overflow: hidden;
	clear: both;
	left: auto;
	right: auto;
	width: 100%;
}

.tribe-bar-collapse .tribe-bar-filters-inner > div, .tribe-bar-collapse #tribe-bar-views {
	width: 100%;
	height: auto;
	margin: 0;
}

.tribe-bar-collapse #tribe-bar-collapse-toggle {
	display: block;
	width: 70%;
}

.tribe-bar-collapse #tribe-bar-collapse-toggle.tribe-bar-collapse-toggle-full-width {
	width: 100%;
}

#tribe-bar-form.tribe-bar-collapse #tribe-bar-views {
	float: left;
	left: auto;
	width: 30%;
}

#tribe-bar-form.tribe-bar-collapse .tribe-bar-views-inner {
	padding: 10px 0;
}

#tribe-bar-form.tribe-bar-collapse .tribe-bar-views-inner label {
	margin: 0;
}

@media only screen and (max-width: 767px) {
	.tribe-bar-collapse #tribe-bar-collapse-toggle {
		width: 60%;
	}
	
	#tribe-bar-form.tribe-bar-collapse #tribe-bar-views  {
		width: 40%;
	}
}
.tribe-bar-is-disabled .tribe-events-page-title {
	line-height: 45px;
	text-align: left;
	clear: none;
	margin: 0;
}
.tribe-bar-disabled {
	float: right;
	position: relative;
	z-index: 10;
}

.tribe-bar-disabled #tribe-events-bar {
	width: auto;
	min-width: 0;
	float: none;
}
.tribe-bar-disabled #tribe-bar-form {
	width: auto;
	border-radius: 3px;
}

.tribe-bar-disabled .tribe-bar-filters {
	float: left;
}

.tribe-bar-disabled .tribe-bar-filters .tribe-bar-date-filter {
	padding: 5px 10px;
}

.tribe-bar-disabled #tribe-bar-form label {
	font-size: 10px;
}
.tribe-bar-disabled #tribe-bar-form .tribe-bar-filters input[type="text"] {
	border: none;
	display: block;
	width: 85px;
	margin: 0;
	padding: 0;
	font-size: 13px;
	line-height: 15px;
}

.tribe-bar-disabled #tribe-bar-form #tribe-bar-views + .tribe-bar-filters {
	left: auto;
	right: 50%;
	width: 50%;
}

.tribe-bar-disabled .tribe-bar-date-filter,
.tribe-events-uses-geolocation .tribe-bar-disabled .tribe-bar-date-filter {
	width: auto;
}

.tribe-bar-disabled #tribe-bar-form #tribe-bar-views {
	width: 50%;
	float: left;
	left: 50%;
	right: auto;
	padding: 0;
}

.tribe-bar-disabled .tribe-bar-views-inner {
	padding: 5px 0;
	border-radius: 0 3px 3px 0;
}

.tribe-bar-disabled #tribe-bar-views .select2-container,
.tribe-bar-disabled #tribe-bar-form .tribe-bar-views-inner label {
	padding: 0 10px;
}
.tribe-bar-disabled #tribe-bar-views .select2-container .select2-choice {
	line-height: 18px;
	height: auto;
	font-size: 13px;
}

.tribe-bar-is-disabled .tribe-select2-results-views.select2-drop .select2-results li {
	padding: 0 10px;
}

.tribe-bar-disabled #tribe-bar-collapse-toggle,
.tribe-bar-disabled .tribe-bar-submit {
	display: none;
}

/* Events Bar Icons */
.tribe-select2-results-views span[class^="tribe-icon-"],
.tribe-select2 span[class^="tribe-icon-"],
.tribe-bar-view-list a[class*="tribe-icon-"] {
	padding-left: 24px;
	background-repeat: no-repeat;
	background-position: 0 50%;
}
.tribe-select2-results-views span[class^="tribe-icon-"] {
	min-height: 16px;
	display: inline-block;
}

/* default icon */
.tribe-select2-results-views span[class^="tribe-icon-"],
.tribe-select2 span[class^="tribe-icon-"],
.tribe-bar-view-list a[class^="tribe-icon-"] {
	background-image: url(images/events-bar/icon-month.png);
	-webkit-background-size: 15px 16px;
    		background-size: 15px 16px;
}

.tribe-select2-results-views span.tribe-icon-list,
.tribe-select2 span.tribe-icon-list,
.tribe-bar-view-list a.tribe-icon-list {
	background-image: url(images/events-bar/icon-list.png);
	-webkit-background-size: 15px 10px;
    		background-size: 15px 10px;
}
.tribe-bar-view-list a.tribe-icon-upcoming,
.tribe-bar-view-list a.tribe-icon-month {
	padding-left: 30px;
	background-position: 10px 50%;
}

.tribe-select2-results-views .tribe-icon-month,
.tribe-select2 span.tribe-icon-month,
.tribe-bar-view-list a.tribe-icon-month {
	background-image: url(images/events-bar/icon-month.png);
	-webkit-background-size: 15px 16px;
    		background-size: 15px 16px;
}
.tribe-select2-results-views span.tribe-icon-week,
.tribe-select2 span.tribe-icon-week {
	background-image: url(images/events-bar/icon-week.png);
	-webkit-background-size: 15px 16px;
    		background-size: 15px 16px;
}
.tribe-select2-results-views span.tribe-icon-day,
.tribe-select2 span.tribe-icon-day {
	background-image: url(images/events-bar/icon-day.png);
	-webkit-background-size: 15px 16px;
    		background-size: 15px 16px;
}
.tribe-select2-results-views span.tribe-icon-photo,
.tribe-select2 span.tribe-icon-photo {
	background-image: url(images/events-bar/icon-photo.png);
	-webkit-background-size: 15px 14px;
    		background-size: 15px 14px;
}
.tribe-select2-results-views span.tribe-icon-map,
.tribe-select2 span.tribe-icon-map {
	background-image: url(images/events-bar/icon-map.png);
	-webkit-background-size: 12px 16px;
    		background-size: 12px 16px;
	background-position: 2px 50%;
}
/* ... */

